tests/unit/default/syntax-error/087-add-pk-table-parens.e.t
---- IN ----
+PK%table(
---- OUT ----
---- ERR ----
syntax: expected <columns-ref-list-end> after `+PK%table(` instead of EOL at position 10 - at line 1
---- EXIT ----
1
